--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.DS_Store
 
 # Pods
-./Pods
+/Pods
 
 # General
 *.swp
@@ -43,3 +43,6 @@ tmp
 # trunk source
 spec/fixtures/spec-repos/trunk/**/*.etag
 spec/fixtures/spec-repos/trunk/*.yml
+
+#Userdata
+xcuserdata
