--- a/Feisty.xcodeproj/xcshareddata/xcschemes/FeistyUnitTests.xcscheme
+++ b/Feisty.xcodeproj/xcshareddata/xcschemes/FeistyUnitTests.xcscheme
@@ -5,6 +5,36 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5A25204223E9792700A4FB72"
+               BuildableName = "FeistyTests.xctest"
+               BlueprintName = "FeistyTests"
+               ReferencedContainer = "container:Feisty.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "NO"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5A25202C23E9792700A4FB72"
+               BuildableName = "Feisty.app"
+               BlueprintName = "Feisty"
+               ReferencedContainer = "container:Feisty.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -35,6 +65,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "5A25202C23E9792700A4FB72"
+            BuildableName = "Feisty.app"
+            BlueprintName = "Feisty"
+            ReferencedContainer = "container:Feisty.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -42,6 +82,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "5A25204223E9792700A4FB72"
+            BuildableName = "FeistyTests.xctest"
+            BlueprintName = "FeistyTests"
+            ReferencedContainer = "container:Feisty.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
