Add stubbing to main project and fix UITest breaking

--- a/Feisty.xcodeproj/xcshareddata/xcschemes/FeistyUITest.xcscheme
+++ b/Feisty.xcodeproj/xcshareddata/xcschemes/FeistyUITest.xcscheme
@@ -51,6 +51,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "5A25202C23E9792700A4FB72"
+            BuildableName = "Feisty.app"
+            BlueprintName = "Feisty"
+            ReferencedContainer = "container:Feisty.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
