--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,19 @@
 # Pods
 /Pods
 
-# userdata
-/xcuserdata
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata/
+*.xccheckout
+profile
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
