Add .json files for games edit scheme to pass UseStubs launch argument

--- a/Feisty.xcodeproj/xcshareddata/xcschemes/Feisty.xcscheme
+++ b/Feisty.xcodeproj/xcshareddata/xcschemes/Feisty.xcscheme
@@ -72,8 +72,16 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "-FIRAnalyticsDebugEnabled"
+            argument = "-noFIRAnalyticsDebugEnabled"
             isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-UseStubs true"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-FIRAnalyticsDebugEnabled"
+            isEnabled = "NO">
          </CommandLineArgument>
       </CommandLineArguments>
    </LaunchAction>
