Fix the launch arguments not being passed correctly and understood

--- a/Feisty.xcodeproj/xcshareddata/xcschemes/Feisty.xcscheme
+++ b/Feisty.xcodeproj/xcshareddata/xcschemes/Feisty.xcscheme
@@ -76,7 +76,7 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
-            argument = "-UseStubs true"
+            argument = "-UseStubs"
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
